@@ -16,6 +16,8 @@ Now
  * VM
    - Support for LIST in ADF definition.
    - Support for redefinition symbols.
+ * GP
+   - Start to define types.
 
 Version 0.0.2 2011-01-31
  * VM
